# ckanext-feedback

./: .coveragerc  .gitignore  .gitmodules  README.md  babel.cfg  pyproject.toml  setup.cfg  setup.py
.github/workflows/: integration.yml  latest-release.yml  test.yml
ckanext/feedback/: create.py  custom_download.py  plugin.py
ckanext/feedback/assets/: webassets.yml
ckanext/feedback/assets/css/: comment.css  comments.css  details.css  edit.css  package_item.css  registration.css  search.css  tooltip.css
ckanext/feedback/assets/js/: comment.js  detail.js  edit.js  management_comments.js  registration.js  search.js
ckanext/feedback/command/: feedback.py
ckanext/feedback/controllers/: download.py  management.py  resource.py  utilization.py
ckanext/feedback/i18n/: ckanext-feedback.pot
ckanext/feedback/i18n/ja/LC_MESSAGES/: ckanext-feedback.po
ckanext/feedback/models/: download.py  issue.py  resource_comment.py  session.py  utilization.py
ckanext/feedback/services/download/: summary.py
ckanext/feedback/services/management/: comments.py
ckanext/feedback/services/resource/: comment.py  summary.py
ckanext/feedback/services/utilization/: details.py  edit.py  registration.py  search.py  summary.py
ckanext/feedback/templates/: header.html
ckanext/feedback/templates/admin/: comments.html
ckanext/feedback/templates/download/: download.html
ckanext/feedback/templates/management/: comments.html
ckanext/feedback/templates/package/: resource_read.html
ckanext/feedback/templates/package/snippets/: additional_info.html  resource_item.html  resources_list.html
ckanext/feedback/templates/resource/: comment.html
ckanext/feedback/templates/snippets/: package_item.html
ckanext/feedback/templates/utilization/: details.html  edit.html  new.html  registration.html  search.html
ckanext/feedback/tests/: test_plugin.py
ckanext/feedback/tests/config/: test.ini
ckanext/feedback/tests/controllers/: test_utilization.py
ckanext/feedback/tests/services/utilization/: test_details.py  test_summary.py
ckanext/feedback/views/: __init__.py  admin.py  download.py  management.py  utilization.py
development/: .dockerignore  Dockerfile  docker-compose.yml  setup.sh
development/docs/: README.md
development/misc/: cli.py  create.py
docs/ja/: admin.md  download.md  feedback_command.md  i18n.md  resource.md  switch_function.md  utilization.md
