[tool.poetry]
name = "ckanext-feedback"
version = "0.1.0"
description = "The extension to feedback on CKAN datasets such as review, number of downloads,use-cases,resolved-problems, and way of use"
authors = ["C3Lab <info.c3lab@gmail.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"
repository = "https://github.com/c-3lab/ckanext-feedback/"
documentation = "https://github.com/c-3lab/ckanext-feedback/README.md"
keywords = ["ckan", "ckan extension", "opendata", "open-data", "review"]
classifiers = [
"Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "3.8.16"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503,W504"

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3